# bulbbot-rs

./: .gitignore  Cargo.toml  README.md  crowdin.yml  docker-compose.yml
.github/move_when_done/: gateway.yml  gateway_handler.yml  guild_service.yml  message_service.yml
.github/workflows/: gateway.yml  gateway_handler.yml  general.yml  guild_service.yml  labels.yml  message_service.yml
Bulbbot.Gateway/: .env-example  README.md
Bulbbot.Gateway/entity/src/: guild_configurations.rs  guild_loggings.rs  guilds.rs  lib.rs  messages.rs
Bulbbot.Gateway/migration/: Cargo.toml  README.md
Bulbbot.Gateway/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230314_213534_create_message_logs.rs
Bulbbot.Gateway/src/: database.rs  main.rs  redis.rs
Bulbbot.Gateway/src/events/: mod.rs
Bulbbot.Gateway/src/events/handler/: loggers.rs  message.rs  message_update.rs
Bulbbot.Gateway/src/events/models/: bulbbot_message.rs  mod.rs
bulbbot.Babelz/: Cargo.toml  README.md
bulbbot.Babelz/locales/: en.yml  zh-CN.yml
bulbbot.Babelz/src/: lib.rs
bulbbot.Commands/: Cargo.toml  Dockerfile  README.md
bulbbot.Commands/src/: main.rs  verify.rs
bulbbot.Commands/src/types/: application.rs  channel.rs  guild_member.rs  interaction.rs  message.rs  mod.rs  user.rs
bulbbot.Common/: Cargo.toml
bulbbot.Common/src/telemetry/: extractor_actix_web.rs  extractor_rabbitmq.rs  injector_rabbitmq.rs  mod.rs
bulbbot.Gateway/: .env-example  Cargo.toml  Dockerfile  README.md
bulbbot.Gateway/entity/: Cargo.toml  README.md
bulbbot.Gateway/entity/src/: guild_configurations.rs  guilds.rs  infractions.rs  lib.rs  messages.rs
bulbbot.Gateway/entity/src/generated_old/: experiments.rs  prelude.rs
bulbbot.Gateway/migration/: Cargo.toml  Dockerfile
bulbbot.Gateway/migration/src/: lib.rs  m20230314_213534_create_message_logs.rs  m20231023_172150_create_guild_config_table.rs  m20231023_204724_create_logging_table.rs  m20231105_163850_create_infraction_table.rs  models.rs
bulbbot.Gateway/src/: constants.rs  database.rs  main.rs  manger_container_structs.rs  rabbit_mq.rs  redis.rs
bulbbot.Gateway/src/events/: event_handler.rs
bulbbot.Gateway/src/events/handler/: event_utills.rs  guild_member_addition.rs  guild_member_removal.rs  guild_member_update.rs  loggers.rs  message.rs  message_delete.rs  message_update.rs  mod.rs  ready.rs  resume.rs
bulbbot.Gateway/src/events/models/: bulbbot_message.rs  bulbbot_user.rs  event.rs  log_type.rs  mod.rs
bulbbot.GatewayHandler/: .env-example  Cargo.toml  Dockerfile  README.md
bulbbot.GatewayHandler/src/: handler.rs  main.rs  rabbit_mq.rs
bulbbot.GatewayHandler/src/events/: guild_member_addition.rs  guild_member_removal.rs  mesage_update.rs  message.rs  message_delete.rs  mod.rs
bulbbot.GatewayHandler/src/models/: event.rs  event_type.rs  mod.rs
bulbbot.GuildService/: .env-example  Cargo.toml  Dockerfile  README.md
bulbbot.GuildService/migrations/2024-06-22-153715_create_guilds/: up.sql
bulbbot.GuildService/migrations/2024-06-22-163915_create_logging/: down.sql  up.sql
bulbbot.GuildService/src/: app_config.rs  injector.rs  main.rs  rabbit_mq.rs  schema.rs
bulbbot.GuildService/src/handlers/: add_guild_member_command.rs  create_guild_command.rs  get_guild_command.rs  mod.rs  remove_guild_member_command.rs
bulbbot.GuildService/src/handlers/guild/: create_guild_command.rs  get_guild_command.rs  mod.rs
bulbbot.GuildService/src/handlers/guild_member/: add_guild_member_command.rs  mod.rs  remove_guild_member_command.rs
bulbbot.GuildService/src/middleware/: telemetry.rs
bulbbot.GuildService/src/models/: guilds.rs  logging.rs  mod.rs
bulbbot.MessageService/: .env-example  Cargo.toml  Dockerfile  README.md
bulbbot.MessageService/migrations/2024-06-23-122432_create_messages/: up.sql
bulbbot.MessageService/src/: app_config.rs  database.rs  http_client.rs  injector.rs  main.rs  rabbit_mq.rs  schema.rs
bulbbot.MessageService/src/dto/: guild_dto.rs  mod.rs
bulbbot.MessageService/src/handlers/: create_message.rs  delete_message.rs  messages.rs  mod.rs  update_message.rs
bulbbot.MessageService/src/middleware/: telemetry.rs
bulbbot.MessageService/src/models/: event_type.rs  messages.rs  mod.rs
bulbbot.Models/: Cargo.toml
bulbbot.Models/src/: event_type.rs  lib.rs
bulbbot.Models/src/guild/guild_member/: guild_member_add_log.rs  guild_member_addition_event.rs  guild_member_removal_event.rs  guild_member_remove_log.rs  mod.rs
bulbbot.Models/src/message/: mesage_delete_log.rs  mesage_update_log.rs  message_delete_event.rs  message_event.rs  message_update_event.rs  mod.rs
entity/: Cargo.toml  README.md
entity/src/: guilds.rs  lib.rs  messages.rs
examples/: Cargo.toml  README.md
examples/i18n/: Cargo.toml
examples/i18n/src/: i18n.rs
examples/rabbit-mq/: .gitignore  Cargo.toml  docker-compose.yml
examples/rabbit-mq/consumer/: index.js  package.json
examples/rabbit-mq/src/: main.rs
examples/src/: main.rs
infrastructure/: naming.md
migration/: Cargo.toml
migration/src/: models.rs
move when done/: gateway.yml
src/: database.rs  main.rs
src/db/: models.rs
src/events/: event_handler.rs  mod.rs
src/events/handler/: loggers.rs  message.rs  message_delete.rs  message_update.rs  mod.rs  ready.rs
