[package]
name = "bulbbot-gw"
description = "Gateway code for Bulbbot"
version = "0.1.0"
edition = "2021"
authors = ["y3ll0w <https://github.com/y3ll0wlife>"]
license = "Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License"
repository = "https://github.com/TeamBulbbot/bulbbot-gw"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
tokio = { version = "1.21.2", features = ["full", "macros", "rt-multi-thread"] }
serenity = { version = "0.11.5", default-features = false, features = [
    "client", 
    "cache", 
    "builder", 
    "collector", 
    "model", 
    "time", 
    "utils", 
    "unstable_discord_api", 
    "rustls_backend", 
    "http", 
    "gateway"
    ] }
dotenv = "0.15.0"
diesel = { version = "2.0.0", features = ["postgres"] }