[package]
name = "babelz"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-i18n = "2.2.1"
serde = "1.0"
serde_yaml = "0.9"

[lib]
name = "babelz"
path = "src/lib.rs"

[[bin]]
name = "babelz"
path = "src/bin/babelz.rs"
