[package]
name = "commands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
ed25519-dalek = "2.0.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_repr = "0.1.10"
serde_json = "1.0.67"
reqwest = { version = "0.11", features = ["json"] }
actix-web = "4"
dotenv = "0.15.0"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
