[package]
name = "gateway"
description = "Gateway code for Bulbbot"
version = "0.2.1"
edition = "2021"
authors = [
    "y3ll0w <https://github.com/y3ll0wlife>",
    "KlukCZ <https://github.com/KlukCZ>",
]
license = "Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License"
repository = "https://github.com/TeamBulbbot/bulbbot-rs"
rust-version = "1.74.1"


[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-futures = "0.2.5"
tokio = { version = "1.35.0", features = ["full", "macros", "rt-multi-thread"] }
serenity = { version = "0.12.0", default-features = false, features = [
    "client",
    "cache",
    "builder",
    "collector",
    "model",
    "utils",
    "unstable_discord_api",
    "rustls_backend",
    "http",
    "gateway",
] }
dotenv = "0.15.0"
darkredis = "0.8.0"
migration = { path = "./migration" }
entity = { path = "./entity" }
