[package]
name = "gateway"
description = "Gateway code for Bulbbot"
version = "0.2.1"
edition = "2021"
authors = [
    "y3ll0w <https://github.com/y3ll0wlife>",
    "KlukCZ <https://github.com/KlukCZ>",
]
license = "Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License"
repository = "https://github.com/TeamBulbbot/bulbbot-rs"
rust-version = "1.74.1"


[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
tokio = { version = "1.35", features = ["full", "macros", "rt-multi-thread"] }
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "builder",
    "collector",
    "model",
    "utils",
    "unstable_discord_api",
    "rustls_backend",
    "http",
    "gateway",
] }
dotenv = "0.15"
serde = "1.0"
serde_json = "1.0"
lapin = { version = "2.3", default-features = false }
actix-web = "4.7"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
