[package]
name = "guild-service"
description = "Guild service"
version = "0.0.0"
edition = "2021"
authors = [
    "y3ll0w <https://github.com/y3ll0wlife>",
    "KlukCZ <https://github.com/KlukCZ>",
    "Wakfi <https://github.com/wakfi>",
]
license = "Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License"
repository = "https://github.com/TeamBulbbot/bulbbot-rs"
rust-version = "1.78"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
tokio = { version = "1.35", features = ["full", "macros", "rt-multi-thread"] }
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "builder",
    "collector",
    "model",
    "utils",
    "unstable_discord_api",
    "rustls_backend",
    "http",
] }
dotenv = "0.15"
serde = "1.0"
serde_json = "1.0"
actix-web = "4.7"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
diesel = { version = "2.2", features = ["postgres", "r2d2"] }
opentelemetry = "0.23"
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.4", features = ["trace"] }
opentelemetry-otlp = { version = "0.16", features = ["default", "tonic"] }
opentelemetry-http = "0.12"
opentelemetry-zipkin = { version = "0.21", features = [
    "reqwest-client",
], default-features = false }
lapin = { version = "2.3", default-features = false }
models = { path = "../bulbbot.Models" }
common = { path = "../bulbbot.Common" }

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
