[package]
name = "message-service"
description = "Message service"
version = "0.0.0"
edition = "2021"
authors = [
    "y3ll0w <https://github.com/y3ll0wlife>",
    "KlukCZ <https://github.com/KlukCZ>",
    "Wakfi <https://github.com/wakfi>",
]
license = "Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License"
repository = "https://github.com/TeamBulbbot/bulbbot-rs"
rust-version = "1.74.1"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
tokio = { version = "1.35", features = ["full", "macros", "rt-multi-thread"] }
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "builder",
    "collector",
    "model",
    "utils",
    "unstable_discord_api",
    "rustls_backend",
    "http",
] }
dotenv = "0.15"
serde = "1.0"
serde_json = "1.0"
actix-web = "4.7"
uuid = { version = "1.8", features = ["v4", "fast-rng", "serde"] }
chrono = "0.4.38"
reqwest = { version = "0.12", features = ["json"] }
diesel = { version = "2.2", features = ["postgres", "r2d2"] }

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
