[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sea-orm = { version = "0.11.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print", "mock", "with-chrono", "with-json", "postgres-array"] }
serenity = { version = "0.11.5", default-features = false, features = [
    "client", 
    "cache", 
    "builder", 
    "collector", 
    "model", 
    "time", 
    "utils", 
    "unstable_discord_api", 
    "rustls_backend", 
    "http", 
    "gateway"
    ] }