[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.35.0", features = ["full", "macros", "rt-multi-thread"] }
sea-orm-migration = { version = "0.12.10", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
