[package]
name = "bulbbot-rabbit-mq-producer-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqprs = "1.5.3"
tokio = { version = "1.35.0", features = ["full", "macros", "rt-multi-thread"] }
serde = "1.0.197"
serde_json = "1.0.114"
